Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49397

WebEngine crashes when switching cache type during page load

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.5.1
    • WebEngine
    • None
    • Ubuntu 14.10
    • 32f83d9c2c884dfa516095c07f8590b2c4c99321

      How to reproduce the bug:
      1.) Open quicknanobrowser
      2.) Load a large webpage (for example: www.index.hu)
      3.) Change HTTP cache type during page load

      It often crashes in release build and asserts in debug.

        1. assert.txt
          3 kB
          Szabolcs David
        For Gerrit Dashboard: QTBUG-49397
        # Subject Branch Project Status CR V

            mibrunin Michael Bruning
            davidsz Szabolcs David
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes