Reuse or clean up HttpNetworkSession when (re-) setting a cache type.

Not reusing or cleaning up the session led to race conditions which in
turn lead to crashes and asserts.

Reuse the session if parameters match, clean up and it recreate otherwise.

Task-number: QTBUG-49397
Change-Id: I4f846a448b50d80a3cf7c4f9bb833fa6d64974d7
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>